--- a/JorgeG/practicas/practicaFBCine/practicaFBCine.html
+++ b/JorgeG/practicas/practicaFBCine/practicaFBCine.html
@@ -1,1 +1,11 @@
+<!-- @see: http://thejackalofjavascript.com/getting-started-with-firebase -->
 
+    <h1>Movie Fire</h1>
+    <h3>¡Guarda todas tus peliculas favoritas!</h3>
+    <hr />
+    <input type="text" id="movieName" placeholder="Enter your Favorite Movie Name" onkeypress="saveToList(event)" />
+    <h4>Mis películas favoritas</h4>
+    <ol id="favMovies">
+        Cargando... Espera por favor..
+    </ol>
+    <div id="movieDetails"></div>
