--- a/JorgeG/practicas/practicaFBCine/practicaFBCine.html
+++ b/JorgeG/practicas/practicaFBCine/practicaFBCine.html
@@ -9,3 +9,17 @@
         Cargando... Espera por favor..
     </ol>
     <div id="movieDetails"></div>
+    
+    <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDwVMLDQ0Gaf8N8dOdmmfi4s8tYDmoxn5A",
+    authDomain: "practicafbcine.firebaseapp.com",
+    databaseURL: "https://practicafbcine.firebaseio.com",
+    projectId: "practicafbcine",
+    storageBucket: "practicafbcine.appspot.com",
+    messagingSenderId: "136303901596"
+  };
+  firebase.initializeApp(config);
+</script>
