update removing ajax

--- a/JorgeG/practicas/practicaFBCine/testPost.html
+++ b/JorgeG/practicas/practicaFBCine/testPost.html
@@ -10,6 +10,8 @@
     </ol>
     <div id="movieDetails"></div>
     
+    <script src="testReadDB.js"></script>
+    <script src="testPost.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
 <script>
   // Initialize Firebase
@@ -23,4 +25,3 @@
   };
   firebase.initializeApp(config);
 </script>
-    <script src="testReadDB.js"></script>
